--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^5.2.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nasa-project---udemy---node": "file:.."
   },
   "devDependencies": {
     "nodemon": "^2.0.18"
