--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.2.1",
     "express": "^4.18.1",
+    "mongoose": "^6.4.4",
     "nasa-project---udemy---node": "file:.."
   },
   "devDependencies": {
