--- a/server/package.json
+++ b/server/package.json
@@ -13,14 +13,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  
   "jest": {
-    "testEnvironment":"node"
+    "testEnvironment": "node"
   },
-
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^5.2.1",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.4",
     "nasa-project---udemy---node": "file:.."
