--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -24,5 +24,5 @@ jobs:
        with:
          node-version: '16'
      # ahora mis propios comandos
-     - run : npm install
-     - run: npm run build --prefix cliente # para el front
+     - run: npm install
+     - run: npm run build --prefix client # para el front
