Build CI pipeline

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,28 +1,29 @@
-name: NASA PROJECT CI   # nombre del workflow
- 
-on:  # triggers, lo que se ejecuta cuando hago por ejemplo un push o un pull request
- # se ejecuta cuando se hace un push en la rama master
- push:
-   branches: [master]  
- # se ejecuta cuando se hace un pull request a la rama master
- pull_request:
-   branches: [master]  
- 
- 
+name: NASA Project CI
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 jobs:
- build:
-   runs-on: ubuntu-latest # el job se ejecuta en la última versión de ubuntu
- # si tuviese CI/CD
- #deploy:
- # needs: build; esto para que sea secuencial, primero build y dsp. deploy; si no
- # pongo lo hace en paralelo
-   steps:
-     - uses: actions/checkout@v2       # fn. incorporada de github para chequear que use el último código
-      # instalamos la versión 16 de Node
-     - name: Use Node.js v16
-       uses: actions/setup-node@v2
-       with:
-         node-version: '16'
-     # ahora mis propios comandos
-     - run: npm install
-     - run: npm run build --prefix client # para el front
+  build:
+    env:
+      CI: true
+      MONGO_URL: mongodb://localhost/nasa
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x]
+        mongodb-version: ['4.4']
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js version ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Use MongoDB from GitHub actions
+        uses: supercharge/mongodb-github-action@1.6.0
+        with:
+          mongodb-version: ${{ matrix.mongodb-version }}
+      - run: npm install
+      - run: npm run build --prefix client
+      - run: npm test
